--- a/Desenvolvimento Front-End/src/output.css
+++ b/Desenvolvimento Front-End/src/output.css
@@ -19,6 +19,8 @@
     --container-md: 28rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-lg: 1.125rem;
+    --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
@@ -193,14 +195,32 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
   .relative {
     position: relative;
   }
   .static {
     position: static;
   }
+  .z-10 {
+    z-index: 10;
+  }
   .m-4 {
     margin: calc(var(--spacing) * 4);
+  }
+  .m-5 {
+    margin: calc(var(--spacing) * 5);
+  }
+  .m-7 {
+    margin: calc(var(--spacing) * 7);
+  }
+  .m-8 {
+    margin: calc(var(--spacing) * 8);
+  }
+  .m-10 {
+    margin: calc(var(--spacing) * 10);
   }
   .m-auto {
     margin: auto;
@@ -226,11 +246,17 @@
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
+  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-14 {
+    margin-top: calc(var(--spacing) * 14);
   }
   .mt-15 {
     margin-top: calc(var(--spacing) * 15);
@@ -307,14 +333,14 @@
   .max-h-screen {
     max-height: 100vh;
   }
-  .min-h-\[calc\(100dvh-2rem\)\] {
-    min-height: calc(100dvh - 2rem);
-  }
   .min-h-\[calc\(100vh-2rem\)\] {
     min-height: calc(100vh - 2rem);
   }
   .min-h-\[calc\(100vh-4rem\)\] {
     min-height: calc(100vh - 4rem);
+  }
+  .min-h-\[calc\(100vh-8rem\)\] {
+    min-height: calc(100vh - 8rem);
   }
   .w-100 {
     width: calc(var(--spacing) * 100);
@@ -563,6 +589,9 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
   .text-\[16px\] {
     font-size: 16px;
   }
@@ -572,8 +601,74 @@
   .text-\[40px\] {
     font-size: 40px;
   }
-  .text-\[clamp\(2rem\,2\.5vw\,2\.25rem\)\] {
-    font-size: clamp(2rem, 2.5vw, 2.25rem);
+  .text-\[clamp\(0\.875rem\,1vw\,1rem\)\] {
+    font-size: clamp(0.875rem, 1vw, 1rem);
+  }
+  .text-\[clamp\(0\.875rem\,2vw\,2\.25rem\)\] {
+    font-size: clamp(0.875rem, 2vw, 2.25rem);
+  }
+  .text-\[clamp\(1rem\,0\.5vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 0.5vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,0\.5vw\,1rem\)\] {
+    font-size: clamp(1rem, 0.5vw, 1rem);
+  }
+  .text-\[clamp\(1rem\,0\.75vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 0.75vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,0vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 0vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1\.3vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 1.3vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1\.4vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 1.4vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1\.5vw\,1\.5rem\)\] {
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
+  }
+  .text-\[clamp\(1rem\,1\.5vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 1.5vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1\.5vw\,1rem\)\] {
+    font-size: clamp(1rem, 1.5vw, 1rem);
+  }
+  .text-\[clamp\(1rem\,1\.5vw\,2rem\)\] {
+    font-size: clamp(1rem, 1.5vw, 2rem);
+  }
+  .text-\[clamp\(1rem\,1\.5vw\,3rem\)\] {
+    font-size: clamp(1rem, 1.5vw, 3rem);
+  }
+  .text-\[clamp\(1rem\,1\.25vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 1.25vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1\.35vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 1.35vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1\.vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 1.vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1vw\,1\.5rem\)\] {
+    font-size: clamp(1rem, 1vw, 1.5rem);
+  }
+  .text-\[clamp\(1rem\,1vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 1vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,1vw\,1rem\)\] {
+    font-size: clamp(1rem, 1vw, 1rem);
+  }
+  .text-\[clamp\(1rem\,2vw\,1rem\)\] {
+    font-size: clamp(1rem, 2vw, 1rem);
+  }
+  .text-\[clamp\(1rem\,075vw\,1\.25rem\)\] {
+    font-size: clamp(1rem, 075vw, 1.25rem);
+  }
+  .text-\[clamp\(1rem\,vw\,1rem\)\] {
+    font-size: clamp(1rem, vw, 1rem);
+  }
+  .text-\[clamp\(2rem\,2vw\,2\.25rem\)\] {
+    font-size: clamp(2rem, 2vw, 2.25rem);
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -697,24 +792,9 @@
       margin: -2rem;
     }
   }
-  .max-lg\:mt-\[-2rem\] {
-    @media (width < 64rem) {
-      margin-top: -2rem;
-    }
-  }
-  .max-lg\:mb-\[-2rem\] {
-    @media (width < 64rem) {
-      margin-bottom: -2rem;
-    }
-  }
   .max-lg\:px-20 {
     @media (width < 64rem) {
       padding-inline: calc(var(--spacing) * 20);
-    }
-  }
-  .max-lg\:pt-\[-2rem\] {
-    @media (width < 64rem) {
-      padding-top: -2rem;
     }
   }
   .max-sm\:hidden {
@@ -732,23 +812,19 @@
       width: 100%;
     }
   }
-  .min-sm\:min-h-\[calc\(100vh-2rem\)\] {
+  .sm\:invisible {
     @media (width >= 40rem) {
-      min-height: calc(100vh - 2rem);
+      visibility: hidden;
     }
   }
-  .min-sm\:max-lg\:min-h-\[calc\(100vh-2rem\)\] {
+  .sm\:m-8 {
     @media (width >= 40rem) {
-      @media (width < 64rem) {
-        min-height: calc(100vh - 2rem);
-      }
+      margin: calc(var(--spacing) * 8);
     }
   }
-  .min-sm\:max-lg\:min-h-\[calc\(100vh-4rem\)\] {
+  .sm\:hidden {
     @media (width >= 40rem) {
-      @media (width < 64rem) {
-        min-height: calc(100vh - 4rem);
-      }
+      display: none;
     }
   }
   .min-sm\:max-lg\:rounded-t-4xl {
@@ -764,6 +840,28 @@
       @media (width < 64rem) {
         padding-top: calc(var(--spacing) * 8);
       }
+    }
+  }
+  .md\:text-lg {
+    @media (width >= 48rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .md\:text-sm {
+    @media (width >= 48rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .lg\:mt-4 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 4);
+    }
+  }
+  .lg\:mt-10 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 10);
     }
   }
   .lg\:h-full {
@@ -786,9 +884,38 @@
       flex-direction: row;
     }
   }
+  .lg\:text-lg {
+    @media (width >= 64rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .lg\:text-sm {
+    @media (width >= 64rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .lg\:text-xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
   .xl\:w-1\/3 {
     @media (width >= 80rem) {
       width: calc(1/3 * 100%);
+    }
+  }
+  .xl\:px-12 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 12);
+    }
+  }
+  .xl\:text-2xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
 }
